--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -2,6 +2,10 @@ body {
   font-family: 'Courier New', Courier, monospace;
 }
 
+.trap {
+  display: flex;
+}
+
 img {
   width: 100px;
   height: 100px;
@@ -10,6 +14,8 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  border : red solid;
 }
 
 /* do not edit this footer */
